--- a/backend/composer.json
+++ b/backend/composer.json
@@ -112,6 +112,7 @@
 
         "clear": "php bin/console cache:clear",
         "app-init": [
+            "php bin/console doctrine:database:create",
             "@migrate",
             "@load-fixtures"
         ],
@@ -126,7 +127,8 @@
 
         "migrate" : "php bin/console doctrine:migrations:migrate -n",
         "make-fixtures" : "php bin/console make:fixtures",
-        "load-fixtures" : "php bin/console doctrine:fixtures:load --purge-with-truncate -n",
+        "load-fixtures" : "php bin/console doctrine:fixtures:load -n",
+        "load-fixtures2" : "php bin/console doctrine:fixtures:load --purge-with-truncate -n",
         "app-load-fixtures" : "php bin/console app:fixturesReload",
         "api-route" : "php bin/console debug:router",
         "debug" : [
@@ -159,7 +161,8 @@
 
         "code-fix": [
             "phpcbf --report=code --report-width=120",
-            "php-cs-fixer fix --allow-risky yes --config ./php-cs-fixer.php ./src ./tests ./phpinsights.php"
+            "php-cs-fixer fix --allow-risky yes --config ./php-cs-fixer.php ./src ./tests ./phpinsights.php",
+            "phpinsights -V"
         ],
         "test": [
             "@validate",
