--- a/z_config/backend/Dockerfile.cli
+++ b/z_config/backend/Dockerfile.cli
@@ -1,4 +1,4 @@
-FROM php:7.4-cli
+FROM php:7.4-cli as build
 
 RUN apt-get update && apt-get install -y git libmcrypt-dev libpq-dev librabbitmq-dev libssl-dev libicu-dev libxslt-dev zip unzip wait-for-it \
     && pecl install xdebug amqp redis \
@@ -6,8 +6,10 @@ RUN apt-get update && apt-get install -y git libmcrypt-dev libpq-dev librabbitmq
     && docker-php-ext-install pdo pdo_pgsql pcntl bcmath xsl \
     && docker-php-ext-enable xdebug amqp redis
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
 RUN mkdir /app
 WORKDIR /app
 
+FROM build as cli
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+FROM build as worker
