--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ cache:
 install:
   - docker version
   - docker-compose -v
+  - echo "$DOCKER_HUB_ACCESS_TOKEN" | docker login -u "$DOCKER_HUB_LOGIN" --password-stdin
   - make build
   - make app-install
   - make app-init
