--- a/backend/config/packages/nelmio_api_doc.yaml
+++ b/backend/config/packages/nelmio_api_doc.yaml
@@ -7,9 +7,9 @@ nelmio_api_doc:
 #      - ^/api/users
   documentation:
     servers:
-      - url: http://dev.blog.kz:8080
+      - url: http://blog.local:8080
         description: API over HTTP
-      - url: https://dev.blog.kz:8080
+      - url: https://blog.local:8080
         description: API over HTTPS
     info:
       title: Blog
