--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,46 +3,19 @@ version: '3.9'
 services:
   web-server:
     container_name: blog_web_server
-    image: nginx:1.15
+    image: researcher2286/blog_nginx:${TAG}
+    restart: unless-stopped
     ports:
       - 8080:80
-    volumes:
-      - ./z_config/nginx.conf:/etc/nginx/nginx.conf
-      - ./frontend/dist:/app/frontend/dist
-      - ./backend/public/bundles:/app/backend/bundles
     depends_on:
-      - frontend
       - backend
-    networks:
-      - blog
-  frontend:
-    container_name: blog_frontend
-    image: blog/frontend:dev
-    build:
-      context: .
-      target: frontend
-      dockerfile: z_config/Dockerfile
-    command: ng serve --host frontend --public-host http://dev.blog.kz:8080 --disableHostCheck true
-    restart: always
-    tty: true
-    volumes:
-      - ./frontend:/app
+      - centrifugo
     networks:
       - blog
   backend:
     container_name: blog_backend
-    image: blog/backend:dev
-    build:
-      context: .
-      target: fpm
-      dockerfile: z_config/Dockerfile
-    environment:
-      - XDEBUG_CONFIG=client_host=${WIN_HOST} start_with_request=trigger
-      - XDEBUG_MODE=debug
-      - XDEBUG_SESSION=PHPSTORM
-      - PHP_IDE_CONFIG=serverName=php-fpm
-    volumes:
-      - ./backend:/app
+    image: researcher2286/blog_backend:${TAG}
+    restart: unless-stopped
     depends_on:
       - db
       - es
@@ -51,45 +24,10 @@ services:
       - centrifugo
     networks:
       - blog
-  php-cli:
-    container_name: blog_php_cli
-    image: blog/php-cli:dev
-    build:
-      context: .
-      target: cli
-      dockerfile: z_config/Dockerfile
-    volumes:
-      - ./backend:/app
-#    restart: always
-#    tty: true
-    depends_on:
-      - db
-      - es
-      - rabbit-mq
-      - redis
-      - centrifugo
-      - mailer
-    networks:
-      - blog
-  worker:
-    container_name: blog_worker
-    image: blog/worker:dev
-    build:
-      context: .
-      target: worker
-      dockerfile: z_config/Dockerfile
   worker-indexer:
     container_name: blog_worker_indexer
-    image: blog/worker:dev
-    environment:
-      - XDEBUG_CONFIG=client_host=${WIN_HOST}
-      - XDEBUG_MODE=debug
-      - XDEBUG_SESSION=PHPSTORM
-      - PHP_IDE_CONFIG=serverName=worker-indexer
-    volumes:
-      - ./backend:/app
-    restart: always
-#    scale: 1
+    image: researcher2286/blog_worker:${TAG}
+    restart: unless-stopped
     command: bash -c "
       wait-for-it db:5432 -s -t 60 &&
       wait-for-it redis:6379 -s -t 60 &&
@@ -107,15 +45,8 @@ services:
       - blog
   worker-plagiarism:
     container_name: blog_worker_plagiarism
-    image: blog/worker:dev
-    environment:
-      - XDEBUG_CONFIG=client_host=${WIN_HOST}
-      - XDEBUG_MODE=debug
-      - XDEBUG_SESSION=PHPSTORM
-      - PHP_IDE_CONFIG=serverName=worker-plagiarism
-    volumes:
-      - ./backend:/app
-    restart: always
+    image: researcher2286/blog_worker:${TAG}
+    restart: unless-stopped
     command: bash -c "
       wait-for-it db:5432 -s -t 60 &&
       wait-for-it redis:6379 -s -t 60 &&
@@ -133,21 +64,12 @@ services:
       - blog
   worker-email:
     container_name: blog_worker_email
-    image: blog/worker:dev
-    environment:
-      - XDEBUG_CONFIG=client_host=${WIN_HOST}
-      - XDEBUG_MODE=debug
-      - XDEBUG_SESSION=PHPSTORM
-      - PHP_IDE_CONFIG=serverName=worker-email
-    volumes:
-      - ./backend:/app
-    restart: always
-#    scale: 2
+    image: researcher2286/blog_worker:${TAG}
+    restart: unless-stopped
     command: bash -c "
       wait-for-it db:5432 -s -t 60 &&
       wait-for-it redis:6379 -s -t 60 &&
       wait-for-it rabbit-mq:5672 -s -t 60 &&
-      wait-for-it mailer:8025 -s -t 60 &&
       wait-for-it centrifugo:8000 -s -t 60 &&
       php bin/console messenger:consume async_email -vv"
     depends_on:
@@ -155,21 +77,12 @@ services:
       - rabbit-mq
       - redis
       - centrifugo
-      - mailer
     networks:
       - blog
   worker-telegram:
     container_name: blog_worker_telegram
-    image: blog/worker:dev
-    environment:
-      - XDEBUG_CONFIG=client_host=${WIN_HOST}
-      - XDEBUG_MODE=debug
-      - XDEBUG_SESSION=PHPSTORM
-      - PHP_IDE_CONFIG=serverName=worker-telegram
-    volumes:
-      - ./backend:/app
-    restart: always
-#    scale: 1
+    image: researcher2286/blog_worker:${TAG}
+    restart: unless-stopped
     command: bash -c "
       wait-for-it db:5432 -s -t 60 &&
       wait-for-it redis:6379 -s -t 60 &&
@@ -186,11 +99,9 @@ services:
   db:
     container_name: blog_db
     image: postgres:13
-    ports:
-      - "5432:5432"
+    restart: unless-stopped
     volumes:
       - db_data:/var/lib/postgresql/data
-    restart: always
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: user
@@ -199,25 +110,13 @@ services:
   redis:
     container_name: blog_redis
     image: redis:6.0
-    ports:
-      - "6379:6379"
-    networks:
-      - blog
-  redisinsight:
-    container_name: blog_redisinsight
-    image: redislabs/redisinsight:1.8.3
-    ports:
-      - "8001:8001"
-    depends_on:
-      - redis
+    restart: unless-stopped
     networks:
       - blog
   es:
     container_name: blog_es
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
-    ports:
-      - "9200:9200"
-      - "9300:9300"
+    restart: unless-stopped
     environment:
       - "discovery.type=single-node"
       - "ES_JAVA_OPTS=-Xms128m -Xmx128m"
@@ -228,28 +127,18 @@ services:
   rabbit-mq:
     container_name: blog_rabbit_mq
     image: rabbitmq:3.8.9-management
+    restart: unless-stopped
     ports:
       - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
-#    healthcheck:
-#      test: ["CMD", "curl", "-f", "http://localhost:15672"]
-#      interval: 30s
-#      timeout: 10s
-#      retries: 5
-    networks:
-      - blog
-  mailer:
-    container_name: blog_mailer
-    image: mailhog/mailhog:v1.0.1
-    ports:
-      - "8082:8025"
     networks:
       - blog
   centrifugo:
     container_name: blog_centrifugo
-    image: centrifugo/centrifugo:v2.8
+    image: researcher2286/blog_centrifugo:${TAG}
+    restart: unless-stopped
     ulimits:
       nofile:
         soft: 65536
@@ -257,11 +146,9 @@ services:
     environment:
       CENTRIFUGO_SECRET: secret
       CENTRIFUGO_API_KEY: secret
-    volumes:
-      - ./z_config/centrifugo:/centrifugo
     ports:
       - "8083:8000"
-    command: centrifugo --admin --admin_insecure
+    command: centrifugo
     networks:
       - blog
 
@@ -276,3 +163,4 @@ volumes:
 networks:
   blog:
     name: blog
+    driver: bridge
