--- a/z_config/nginx/nginx.conf
+++ b/z_config/nginx/nginx.conf
@@ -50,19 +50,19 @@ http {
             proxy_set_header Connection $connection_upgrade;
         }
 
-#        location /api {
-#            index index.php index.html index.htm;
-#            try_files $uri /index.php?$query_string;
-#        }
+        location /api {
+            index index.php index.html index.htm;
+            try_files $uri /index.php?$query_string;
+        }
 
-#        location ~ \.php$ {
-#            fastcgi_pass backend:9000;
-#            fastcgi_index index.php;
-#            fastcgi_param SCRIPT_FILENAME /app/public/index.php;
-#            include fastcgi_params;
-#            fastcgi_param REMOTE_ADDR $http_x_real_ip;
-#            fastcgi_param PATH_INFO $fastcgi_path_info;
-#        }
+        location ~ \.php$ {
+            fastcgi_pass backend:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME /app/public/index.php;
+            include fastcgi_params;
+            fastcgi_param REMOTE_ADDR $http_x_real_ip;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+        }
 
         location / {
           root /usr/share/nginx/html;
