Fix disable cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,10 @@ before_install:
 #    | xargs -n 2 -t sh -c 'test -e $HOME/docker/$1.tar.gz || docker save $0 | gzip -2 > $HOME/docker/$1.tar.gz'
 #
 
-cache:
-  bundler: true
-  directories:
-    - $HOME/docker
+#cache:
+#  bundler: true
+#  directories:
+#    - $HOME/docker
 
 install:
   - docker version
