--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: bash
 dist: bionic
 
 env:
-  - DOCKER_COMPOSE_VERSION=1.27.4
-  - TAG=v1.2
+  - DOCKER_COMPOSE_VERSION=1.27.4 TAG=v1.2
 before_install:
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
