Fix 404 for resource swagger and optimize copy frontend resource to nginx

--- a/z_config/nginx/nginx.conf
+++ b/z_config/nginx/nginx.conf
@@ -55,6 +55,10 @@ http {
             try_files $uri /index.php?$query_string;
         }
 
+        location /bundles {
+            root /usr/share/nginx/html/$query_string;
+        }
+
         location ~ \.php$ {
             fastcgi_pass backend:9000;
             fastcgi_index index.php;
