Add command app-init-prod

--- a/docker-compose.build.prod.yml
+++ b/docker-compose.build.prod.yml
@@ -16,6 +16,8 @@ services:
     build:
       context: ./backend
       target: worker-prod
+    networks:
+      - blog
   centrifugo:
     build:
       context: ./z_config/centrifugo
