Change travis commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - docker version
   - docker-compose -v
   - echo "$DOCKER_HUB_ACCESS_TOKEN" | docker login -u "$DOCKER_HUB_LOGIN" --password-stdin
-  - make build-dev
+  - make build-dev-docker-images
   - make app-install
   - make app-init
 
@@ -26,8 +26,9 @@ script:
   - make app-code-check
   - make app-test
   - make app-test-coverage
-  - make build-prod
-  - make images-push
+  - make app-build
+  - make build-prod-docker-images
+  - make push-prod-docker-images
 
 after_success:
   - cd backend/
