Fix Unable to write in the "cache" directory (/app/var/cache/dev).

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -46,15 +46,13 @@ RUN rm -f -R z_coverage && \
     rm -f -R migrations && \
     rm -f -R src/DataFixtures && \
     rm -f -R tests && \
-    rm -f -R var && \
+    rm -f -R var && mkdir var && chown www-data:www-data var && \
     rm -f  .php_cs.dist .php_cs.cache
 
 #=======================================================================================================================
 FROM base as worker-prod
 COPY . /app
 RUN rm -f -R z_coverage && \
-    rm -f -R migrations && \
-    rm -f -R src/DataFixtures && \
     rm -f -R tests && \
-    rm -f -R var && \
+    rm -f -R var && mkdir var && chown www-data:www-data var && \
     rm -f  .php_cs.dist .php_cs.cache
