--- a/backend/.env
+++ b/backend/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=fc41ba35bbb00934481e299795accff8
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
@@ -53,3 +53,4 @@ TELEGRAM_DSN=telegram://1264040165:AAG0Nm9_SdGT6dkeh-rJKpoNZtwRFn7neh8@default?c
 
 ELASTIC_SEARCH_HOST=es
 REDIS_DSN=tcp://redis:6379
+# REDIS_HOST=redis
