--- a/backend/composer.json
+++ b/backend/composer.json
@@ -123,6 +123,7 @@
         "make-migration" : "php bin/console make:migration",
 
         "diff-migration" : "php bin/console doctrine:migrations:diff -n",
+        "stats-migration" : "php bin/console doctrine:migrations:status",
         "message-failed" : "php bin/console messenger:failed:show -vv",
         "message-failed-retry" : "php bin/console messenger:failed:retry -vv",
 
@@ -133,8 +134,10 @@
         "app-load-fixtures" : "php bin/console app:fixturesReload",
         "api-route" : "php bin/console debug:router",
         "debug" : [
+            "php bin/console debug:autowiring messenger> /dev/null",
             "php bin/console debug:autowiring > /dev/null",
             "php bin/console debug:config > /dev/null",
+            "php bin/console debug:config FrameworkBundle messenger > /dev/null",
             "php bin/console debug:container > /dev/null",
             "php bin/console debug:event-dispatcher > /dev/null",
             "php bin/console debug:router > /dev/null",
