--- a/backend/config/packages/prod/monolog.yaml
+++ b/backend/config/packages/prod/monolog.yaml
@@ -14,3 +14,6 @@ monolog:
             type: console
             process_psr_3_messages: false
             channels: ["!event", "!doctrine"]
+#        es:
+#            type: service
+#            id: Symfony\Bridge\Monolog\Handler\ElasticsearchLogstashHandler
